Add Multi-language to IPFS info Alert

--- a/src/languages/languages.json
+++ b/src/languages/languages.json
@@ -23,6 +23,8 @@
     "11": "Cifrado",
     "12": "Automático",
     "13": "Subir archivos",
+        "131":"Crear Carpeta",
+        
     "14": "Panel de control",
         "141": "Almacenamiento usado",
         "142": "Archivos totales",
@@ -98,6 +100,12 @@
         "1134": "Cerrar",
     "114": "Árbol de enlaces",
     "115": "Estado IPFS",
+        "1151": "Cuando ingresas a",
+        "1152":"te conectas automáticamente como un nodo IPFS en tu navegador.",
+        "1153":"Por ahora, la fijación de archivos está disponible sólo para",
+        "1154": "público",
+        "1155":"archivos (los archivos cifrados solo se pueden descifrar a través de la plataforma hello.app pero aún están en IPFS). Encuentre más información al respecto a continuación:",
+        "1156": "Más información sobre la integración de Hello IPFS",
     "116": "Perfil",
     "117": "Configuración",
         "1171":"Elige tu idioma",
@@ -128,6 +136,7 @@
         "11": "Encryption",
         "12": "Automatic",
         "13": "Upload files",
+            "131":"Create Folder",
         "14": "Dashboard",
             "141": "Used Storage",
             "142": "Total files",
@@ -206,6 +215,14 @@
             
         "114": "Linktree",
         "115": "IPFS Status",
+            "1151":"When you enter",
+            "1152":"you automatically connect as an IPFS node on your browser.",
+            "1153":"For now, file pinning is available only for",
+            "1154":"public",
+            "1155":"files (encrypted files are only decryptable through hello.app platform yet still on IPFS). Find more information about it below:",
+            "1156":"Learn about Hello IPFS Integration",
+
+
         "116": "Profile",
         "117": "Settings",
             "1171":"Choose your language",
@@ -237,6 +254,7 @@
         "11": "Crittografia",
         "12": "Automatico",
         "13": "Carica file",
+            "131":"Crea cartella",
         "14": "Cruscotto",
             "141": "Archiviazione usata",
             "142": "File totali",
@@ -314,6 +332,12 @@
             "1134": "Chiudere",
         "114": "Albero dei collegamenti",
         "115": "Stato IPFS",
+            "1151":"Quando entri",
+            "1152":"ti connetti automaticamente come nodo IPFS sul tuo browser.",
+            "1153":"Per ora, il blocco dei file è disponibile solo per",
+            "1154":"pubblico",
+            "1155":"file (i file crittografati possono essere decifrati solo tramite la piattaforma hello.app, ma sono ancora su IPFS). Trovi ulteriori informazioni a riguardo di seguito:",
+            "1156": "Informazioni sull'integrazione Hello IPFS",
         "116": "Profilo",
         "117": "Impostazioni",
             "1171":"Scegli la tua lingua",
@@ -333,7 +357,7 @@
             "026":"Senden Sie einen magischen Link",
             "027":"Weitere Informationen hier",
 
-        "03":"Hello Crowfunding",
+        "03":"Nehmen Sie an unserem Crowdfunding teil",
         "04":"Datenschutzerklärung",
             
         "05":"App starten",
@@ -344,6 +368,7 @@
         "11":"Verschlüsselung",
         "12":"Automatisch",
         "13":"Dateien hochladen",
+            "131": "Ordner erstellen",
         "14":"Dashboard",
             "141":"Genutzter Speicher",
             "142":"Gesamtdateien",
@@ -422,6 +447,13 @@
 
         "114":"Linktree",
         "115":"IPFS-Status",
+            "1151": "Wenn Sie eintreten",
+            "1152": "Sie verbinden sich automatisch als IPFS-Knoten in Ihrem Browser.",
+            "1153": "Im Moment ist das Anheften von Dateien nur verfügbar für",
+            "1154": "öffentlich",
+            "1155": "Dateien (verschlüsselte Dateien sind nur über die hello.app-Plattform entschlüsselbar, aber immer noch auf IPFS). Weitere Informationen dazu finden Sie unten:",
+            "1156": "Erfahren Sie mehr über die Hello IPFS-Integration",
+
         "116":"Profil",
         "117":"Einstellungen",
             "1171":"Wählen Sie Ihre Sprache",
@@ -452,6 +484,7 @@
          "11": "Criptografia",
          "12": "Automático",
          "13": "Carregar arquivos",
+            "131":"Criar Pasta",
          "14": "Painel",
              "141": "Armazenamento Usado",
              "142": "Total de arquivos",
@@ -530,6 +563,12 @@
 
          "114": "Linktree",
          "115": "Status IPFS",
+            "1151":"Quando você entrar",
+            "1152":"você se conecta automaticamente como um nó IPFS no seu navegador.",
+            "1153":"Por enquanto, a fixação de arquivos está disponível apenas para",
+            "1154":"público",
+            "1155":"arquivos (arquivos criptografados só podem ser descriptografados através da plataforma hello.app, mas ainda em IPFS). Encontre mais informações sobre isso abaixo:",
+            "1156":"Saiba mais sobre a integração Hello IPFS",
          "116": "Perfil",
          "117": "Configurações",
              "1171":"Escolha seu idioma",
@@ -560,6 +599,7 @@
          "11": "加密",
          "12":"自动",
          "13": "上传文件",
+            "131":"创建文件夹",
          "14":"仪表板",
              "141":"已用存储空间",
              "142": "文件总数",
@@ -638,6 +678,12 @@
 
          "114": "链接树",
          "115": "IPFS 状态",
+            "1151":"当您进入时",
+            "1152":"您在浏览器上自动连接为 IPFS 节点。",
+            "1153":"目前，文件固定仅适用于",
+            "1154":"公开",
+            "1155":"文件（加密文件只能通过 hello.app 平台解密，但仍在 IPFS 上）。在下面找到有关它的更多信息：",
+            "1156":"了解 Hello IPFS 集成",
          "116": "个人资料",
          "117": "设置",
              "1171":"选择您的语言",
@@ -668,6 +714,7 @@
          "11": "Шифрование",
          "12": "Автоматический",
          "13": "Загрузить файлы",
+            "131":"Создать папку",
          "14": "Панель управления",
              "141": "Использованное хранилище",
              "142": "Всего файлов",
@@ -746,6 +793,12 @@
 
          "114": "Линктри",
          "115": "Состояние IPFS",
+            "1151":"Когда вы войдете",
+            "1152":"вы автоматически подключаетесь как узел IPFS в своем браузере.",
+            "1153":"На данный момент закрепление файлов доступно только для",
+            "1154":"публичный",
+            "1155":"файлы (зашифрованные файлы можно расшифровать только через платформу hello.app, но все еще на IPFS). Дополнительную информацию об этом можно найти ниже:",
+            "1156":"Подробнее об интеграции Hello IPFS",
          "116": "Профиль",
          "117": "Настройки",
              "1171":"Выберите язык",
@@ -776,6 +829,7 @@
          "11": "التشفير",
          "12": "تلقائي",
          "13": "رفع الملفات",
+            "131": "إنشاء مجلد",
          "14": "لوحة القيادة",
              "141": "التخزين المستخدم",
              "142": "إجمالي الملفات",
@@ -854,6 +908,12 @@
 
          "114": "لينكتري",
          "115": "حالة IPFS",
+            "1151":"عند الدخول",
+            "1152":"تتصل تلقائيًا كعقدة IPFS على متصفحك.",
+            "1153":"في الوقت الحالي، تثبيت الملف متاح فقط لـ",
+            "1154":"عام",
+            "1155":"الملفات (لا يمكن فك تشفير الملفات المشفرة إلا من خلال النظام الأساسي hello.app ولكنها لا تزال موجودة على IPFS). يمكنك العثور على مزيد من المعلومات حول هذا الموضوع أدناه:",
+            "1156":"تعرف على تكامل Hello IPFS",
          "116": "الملف الشخصي",
          "117": "الإعدادات",
              "1171":"اختر لغتك",
