Fix size support buttons language

--- a/src/languages/languages.json
+++ b/src/languages/languages.json
@@ -357,7 +357,7 @@
             "026":"Senden Sie einen magischen Link",
             "027":"Weitere Informationen hier",
 
-        "03":"Nehmen Sie an unserem Crowdfunding teil",
+        "03":"Hello Crowfunding",
         "04":"Datenschutzerklärung",
             
         "05":"App starten",
@@ -919,6 +919,5 @@
              "1171":"اختر لغتك",
          "118": "تسجيل الخروج"
     }
-    
 }
 
